<?xml version="1.0"?>
<package>
  <name>rviz_melodic_urdf_issue</name>
  <version>0.0.0</version>
  <description>rviz_melodic_urdf_issue</description>
  <maintainer email="bihlmaier@robodev.eu">Andreas Bihlmaier</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
